<resources>
    <string name="app_name">Football Score Keeper</string>
    <string name="team_a">TEAM A</string>
    <string name="team_b">TEAM B</string>
    <string name="zero_a">0</string>
    <string name="zero_b">0</string>
    <string name="foul_a">0</string>
    <string name="foul_b">0</string>
    <string name="foul_team_a">FOUL</string>
    <string name="foul_team_b">FOUL</string>
    <string name="reset">RESET</string>
    <string name="goal_a">GOAL</string>
    <string name="goal_b">GOAL</string>
</resources>
